Mirror camera / Fixed scrollbar

--- a/client/components/chat/chat.less
+++ b/client/components/chat/chat.less
@@ -9,6 +9,7 @@
     flex-grow: 1;
     -webkit-flex-grow: 1;
     min-height: 5em;
+    overflow: auto;
   }
 
   .console{
