--- a/client/components/video/video.less
+++ b/client/components/video/video.less
@@ -38,6 +38,7 @@
   #myVideo{
     height: 9em;
     cursor: pointer;
+    transform: scaleX(-1);
 
   }
 }
